--- a/modules/ROOT/pages/tools/antora.adoc
+++ b/modules/ROOT/pages/tools/antora.adoc
@@ -66,21 +66,4 @@ NOTE: You can specify multiple attributes with comma separation: `npx antora --f
 
 == Versioning
 
-Usually producing versioned docs isn't that tightly declared into your project's configuration. With Antora, it's explicitly managed within the playbook.
-
-== AsciiDoctor-pdf for print
-
-Antora is essentially a wrapper for AsciiDoctor with support for link:https://www.npmjs.com/package/asciidoctor-pdf[AsciiDoctor-pdf].
-
-=== Custom PDF styling
-Extend the default PDF theme to your liking by adjusting values in a separate YAML file.
-
-```YAML
-TODO...
-```
-
-Here's the call for how I made my portfolio: `asciidoctor-pdf --theme themes/pdf-theme.yml -a pdf-fontsdir=themes/fonts/OpenSans resume.adoc -o modules/ROOT/attachments/resume.pdf`
-
-
-
-
+Usually producing versioned docs isn't that tightly declared into your project's configuration. With Antora, it's explicitly managed within the playbook. TODO...
