--- a/modules/ROOT/pages/writing-samples/asciidoc.adoc
+++ b/modules/ROOT/pages/writing-samples/asciidoc.adoc
@@ -1,21 +1,26 @@
 = AsciiDoc
 
-Hugo or from this portfolio.
+I've done a lot of writing in AsciiDoc for this portfolio, so I though I'd show you how the sausage is made. The intent of this page is to demonstrate my familiarity with this powerful syntax.
 
-== Configure notifications (AsciiDoc) 
+== Principles > Docs-as-code
+
+[source.asciidoc]
+----
+include::page$/principles/docs-as-code.adoc[]
+----
+
+== Principles > Agile methodology
 
 [source,asciidoc]
 ----
-include::example$notification-config.adoc[lines=4..-1]
+include::page$/principles/agile.adoc[]
 ----
 
-== Writing samples page
+== Tools > Git 
 
 The raw AsciiDoc syntax of this page.
 
-[source,asciidoc,wrap=word]
+[source,asciidoc]
 ----
 include::page$/tools/git.adoc[]
 ----
-
-TODO: add more from portfolio (need to figure out word-wrap, white-space values...(maybe hardcode textwidth in example?)
