--- a/modules/ROOT/pages/writing-samples/asciidoc.adoc
+++ b/modules/ROOT/pages/writing-samples/asciidoc.adoc
@@ -6,19 +6,19 @@ I've done a lot of writing in AsciiDoc for this portfolio, so I though I'd show 
 
 [source.asciidoc]
 ----
-include::page$/principles/docs-as-code.adoc[literal]
+include::page$/principles/docs-as-code.adoc[]
 ----
 
 == Principles > Agile methodology
 
 [source,asciidoc]
 ----
-include::page$/principles/agile.adoc[literal]
+include::page$/principles/agile.adoc[]
 ----
 
 == Tools > Git 
 
 [source,asciidoc]
 ----
-include::page$/tools/git.adoc[literal]
+include::page$/tools/git.adoc[]
 ----
