--- a/modules/ROOT/pages/writing-samples/asciidoc.adoc
+++ b/modules/ROOT/pages/writing-samples/asciidoc.adoc
@@ -6,7 +6,7 @@ I've done a lot of writing in AsciiDoc for this portfolio, so I though I'd show 
 
 [source.asciidoc]
 ----
-include::page$/principles/docs-as-code.adoc[]
+include::example$/docs-as-code.adoc[]
 ----
 
 == Principles > Agile methodology
