--- a/modules/ROOT/examples/docs-as-code.adoc
+++ b/modules/ROOT/examples/docs-as-code.adoc
@@ -152,15 +152,9 @@ Another test of documentation is to verify the writing against the ticket's acce
 
 Here's a couple of examples to show what I mean: 
 
-++++
-include::example$acceptance-criteria/bad-ac.adoc[]
-++++
-++++
-include::example$acceptance-criteria/good-ac.adoc[]
-++++
-++++
-include::partial$acceptance-criteria/note-about-ac.adoc[]
-++++
+\include::example$acceptance-criteria/bad-ac.adoc[]
+\include::example$acceptance-criteria/good-ac.adoc[]
+\include::partial$acceptance-criteria/note-about-ac.adoc[]
 
 === Reviews
 
