--- a/modules/ROOT/examples/docs-as-code.adoc
+++ b/modules/ROOT/examples/docs-as-code.adoc
@@ -59,14 +59,19 @@ a Jira ticket. This ticket contains the most up-to-date information
 about the feature and is a more appropriate place for details than a
 branch name.
 
-[source,bash] ++++ $ git branch
+[source,bash] 
 
+++++ 
+$ git branch
 * main
-feature/jira-123 feature/jira-456 feature/jira-789 release/v1.1.0
-hotfix/v1.0.4 ++++
+feature/jira-123
+feature/jira-456 
+feature/jira-789 
+release/v1.1.0
+hotfix/v1.0.4 
+++++
 
 This isn't the most alluring naming convention, but sometimes:
-
 [quote,Unix Philosophy] Clarity is better than cleverness
 
 === Pull requests
@@ -80,7 +85,7 @@ the release.
 == Content reuse
 
 Docs-as-code encourages tech writers to borrow from the coding concept
-of **modular programming**. This term describes how programmers
+of *modular programming*. This term describes how programmers
 separate code into independent files depending on the purpose it
 serves. This approach leads to less manual work and makes managing
 code must easier. Why write something three or four times when you can
@@ -102,22 +107,29 @@ requires a specific permission. If the path to this location changes
 or I want to update wording in this blurb, I only need to update the
 snippet once.
 
-[source,xml] ++++ <MadCap:snippetBlock
-src="../Resources/Snippets/user/view-permissions.flsnp" /> ++++
+[source,xml]
+++++ 
+<MadCap:snippetBlock src="../Resources/Snippets/user/view-permissions.flsnp" /> 
+++++
 
 In *Hugo*, I can create a custom shortcode that contains a helpful
 short description for a feature. I'll then reuse this shortcode in
 feature docs and as a release notes introduction.
 
-[source,markdown] ++++ {{% feature-xyz-short-desc
-%}} ++++
+[source,markdown] 
+++++ 
+{{% feature-xyz-short-desc %}} 
+++++
 
 When writing with AsciiDoc in *Antora*, I can use the `include::`
 directive to display source code from a file. This is preferable to
 copying and pasting it on different pages because, if this source code
 example changes, I only need to update the example once.
 
-[source,asciidoc] ++++ \include::example$feature-xyz.php[] ++++
+[source,asciidoc] 
+++++ 
+\include::example$feature-xyz.php[] 
+++++
 
 === Topic typing
 
@@ -135,11 +147,14 @@ Dedicating a page to a specific topic type is enough modularity
 sometimes. For increased reuse potential, I can make each piece of
 content within a page more modular, if desired. For example:
 
-[source,asciidoc] ++++ = Topic xyz
+[source,asciidoc] 
+++++ 
+= Topic xyz
 
 include::topic-xyz-intro.adoc include::topic-xyz-prerequities.adoc
 include::concept-x.adoc include::concept-y.adoc
-include::concept-z.adoc ++++
+include::concept-z.adoc 
+++++
 
 Regardless of how modular I go, I make sure I'm consistent in how I
 template these files. This consistency enables me to plug-and-play
