--- a/modules/ROOT/examples/docs-as-code.adoc
+++ b/modules/ROOT/examples/docs-as-code.adoc
@@ -64,9 +64,9 @@ branch name.
 $ git branch
 
 * main
-feature/jira-123
-feature/jira-456 
-feature/jira-789 
+feature/Jira-123
+feature/Jira-456 
+feature/Jira-789 
 release/v1.1.0
 hotfix/v1.0.4 
 ++++
