--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -10,7 +10,5 @@
 ** xref:tools/hugo.adoc[]
 ** xref:tools/antora.adoc[]
 * Writing samples 
-** xref:writing-samples/feature.adoc[]
-** xref:writing-samples/release-notes.adoc[]
-** xref:writing-samples/portfolio.adoc[]
-* xref:resume.adoc[]
+** xref:writing-samples/xhtml.adoc[]
+** xref:writing-samples/asciidoc.adoc[]
