--- a/modules/ROOT/pages/principles/docs-as-code.adoc
+++ b/modules/ROOT/pages/principles/docs-as-code.adoc
@@ -2,7 +2,7 @@
 
 Modern tech writing has evolved to treat documentation like code in how it's versioned, reviewed, tested, and deployed. While I began my career watching Microsoft Word struggle with 500+ page documents, I've learned first-hand that delivering high quality documentation at scale means having high quality tools and processes.
 
-Fortunately, there's no need to reinvent the wheel. Treat the docs like code! 
+Fortunately, there's no need to reinvent the wheel. Treat the docs like code!
 
 image:docs-as-code.jpeg[decorative image of Docs as Code process]
 
@@ -14,15 +14,15 @@ Whether working alone or on a team, proper version control is a must.
 
 As a general rule, [branch]`main` branch always contains production-ready code. This way, you can quickly release new docs without worry of it containing unfinished work or errors that'll break your site. Feature branches off of [branch]`main` contain in-progress work for upcoming releases. I prefer to scope these feature branches at the xref:./agile.adoc[Epic or Feature level] and merge completed feature docs into them. How you structure your tickets informs how you structure your branches.
 
-.Feature branching (simple) 
+.Feature branching (simple)
 image::feature-branching-simple.png[Feature branches without release branch]
 
-Branching in this way is more straight-forward the more "agile" a company's release schedule is. In other words, if a company releases a feature once it's complete, the feature branch containing the docs is simply merged to [branch]`main` come release time. However, if a company prefers a longer release runway (_cough_ waterfall! _cough_), I'll create a release branch off [branch]`main` to merge completed feature branches into. 
+Branching in this way is more straight-forward the more "agile" a company's release schedule is. In other words, if a company releases a feature once it's complete, the feature branch containing the docs is simply merged to [branch]`main` come release time. However, if a company prefers a longer release runway (_cough_ waterfall! _cough_), I'll create a release branch off [branch]`main` to merge completed feature branches into.
 
 .Feature branching with a release branch
 image::feature-branching-release.png[Feature branches with release branch]
 
-Branching like this makes writing release notes for service packs and hotfixes simple, as these docs are just another feature branch. 
+Branching like this makes writing release notes for service packs and hotfixes simple, as these docs are just another feature branch.
 
 .Feature branching with release and hotfix branches
 image::feature-branching-release-hotfix.png[Feature branches with release and hotfix branch]
@@ -54,11 +54,11 @@ Before merging, I like to xref:#_testability[test] and xref:#_peer_review[peer r
 
 == Content reuse
 
-Docs-as-code encourages tech writers to borrow from the coding concept of **modular programming**. This term describes how programmers separate code into independent files depending on the purpose it serves. This approach leads to less manual work and makes managing code must easier. Why write something three or four times when you can write it once and reuse it? This is transferrable to docs, of course. 
+Docs-as-code encourages tech writers to borrow from the coding concept of **modular programming**. This term describes how programmers separate code into independent files depending on the purpose it serves. This approach leads to less manual work and makes managing code must easier. Why write something three or four times when you can write it once and reuse it? This is transferrable to docs, of course.
 
-Writing docs that are more flexible and narrowly scoped may take some initial planning, but the approach is ultimately more efficient, not to mention less of a headache to manage. Proper content reuse also creates consistency for readers, making the docs easier to read. 
+Writing docs that are more flexible and narrowly scoped may take some initial planning, but the approach is ultimately more efficient, not to mention less of a headache to manage. Proper content reuse also creates consistency for readers, making the docs easier to read.
 
-Content reuse goes by different names depending on the software I'm using, but the concept remains the same. Here are a few examples. 
+Content reuse goes by different names depending on the software I'm using, but the concept remains the same. Here are a few examples.
 
 === Examples depending on software
 
@@ -66,26 +66,26 @@ In *MadCap Flare*, I can use a snippet to remind users where to view their user 
 
 [source,xml]
 ----
-<MadCap:snippetBlock src="../Resources/Snippets/user/view-permissions.flsnp" />
+<MadCap:snippetBlock src="../Resources/Snippets/view-user-permissions.flsnp" />
 ----
 
-In *Hugo*, I can create a custom shortcode that contains a helpful short description for a feature. I'll then reuse this shortcode in feature docs and as a release notes introduction.
+In *Hugo*, I can create a custom shortcode with this information.
 
 [source,markdown]
 ----
-{{% feature-xyz-short-desc %}}
+{{% view-user-permissions %}}
 ----
 
-When writing with AsciiDoc in *Antora*, I can use the `include::` directive to display source code from a file. This is preferable to copying and pasting it on different pages because, if this source code example changes, I only need to update the example once.
+When writing with AsciiDoc in *Antora*, I can use the `include::` directive to display content from a modular file.
 
 [source,asciidoc]
 ----
-\include::example$feature-xyz.php[]
+\include::page$/view-user-permissions.adoc[]
 ----
 
 === Topic typing
 
-Another valuable content reuse technique is topic typing. At it's most general, I prefer to organize content into three basic categories: **concept**, **task**, or **reference**. 
+Another valuable content reuse technique is topic typing. At it's most general, I prefer to organize content into three basic categories: **concept**, **task**, or **reference**.
 
 * **Concept:** used when introducing or explaining an idea, like the overview of a complex feature.
 * **Task:** used when instructing user action, like enabling a feature within a product.
@@ -108,11 +108,13 @@ Regardless of how modular I go, I make sure I'm consistent in how I template the
 
 NOTE: Structuring content for reuse is easier to do from the start but don't feel like you have to structure _everything_ for reuse. Discuss with your team (or yourself) to determine how modular your docs should be.
 
-== Reviews 
+== Reviews
 
 Docs are best when they're collaborative. And the most fruitful collaboration often takes the form of reviews. Tech writers usually aren't the expert on the subject they're writing--for this, there's the xref:#_subject_matter_expert_sme_review[subject matter expert (SME) review]. And authors usually aren't the best editors of their own work--for this, there's the xref:#_peer_review[peer review].
 
 Reviews might look differently depending on personal preference and the software used. I've conducted reviews of plain text docs in GitHub as part of a Pull Request, as well as in exported Word docs uploaded to SharePoint with the Track Changes feature turned on.
+
+As is the rule with all collaboration, work with others to find the best compromise.
 
 === Subject matter expert (SME) review
 
@@ -134,23 +136,15 @@ Tech writers don't just write the docs. They should test them too!
 
 === Linters
 
-Validating documentation doesn't need to be purely subjective. Tools like link:https://vale.sh[Vale^] deliver data around style guide adherence and readability. Vale lets you customize existing style guides and create your own rules to reflect your organization's preferences. It's a very powerful tool. 
+Validating documentation doesn't need to be purely subjective. Tools like link:https://vale.sh[Vale^] deliver data around style guide adherence and readability. Vale lets you customize existing style guides and create your own rules to reflect your organization's preferences. It's a very powerful tool.
 
-.Updates I've made to Vale in this project
-====
-* removed all Readability tests other than `Readability.FleschKincaid` and `Readability.FleschReadingEase` since I prefer focusing on syllable count
-* removed `Google.FirstPerson.yml` rule since first-person is okay in my portfolio
-* added custom vocab list at `styles/Vocab/portfolio` with `accept.txt` file for spelling exceptions
-* added "Agile methodology" to write-good xref:[exceptions list] so it won't flag it as "too wordy"
-====
-
-NOTE: Running the `vale sync` command re-downloads any removed rules from your list of packages.
+Check out xref::../tools/vale.adoc[my personal Vale configuration for this portfolio, here.]
 
 === Acceptance criteria
 
-Another test of documentation is to verify the writing against the ticket's acceptance criteria. This calls for clear, demonstrative acceptance criteria that can pass or fail such a test. 
+Another test of documentation is to verify the writing against the ticket's acceptance criteria. This calls for clear, demonstrative acceptance criteria that can pass or fail such a test.
 
-Here's a couple of examples to show what I mean: 
+Here's a couple of examples to show what I mean:
 
 include::example$acceptance-criteria/bad-ac.adoc[]
 include::example$acceptance-criteria/good-ac.adoc[]
