--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,3 +1,5 @@
-= Feature abc 
+= Feature abc
 
-This is prerelease document for feature-abc!
+This is prerelease document for feature-abc! I describe how create alpha versions of feature branch docs xref::1.0.0@ROOT/page$/tools/git.adoc#_structured_configuration[on this page].
+
+To get back to my actual portfolio
