--- a/modules/ROOT/pages/common-tasks.adoc
+++ b/modules/ROOT/pages/common-tasks.adoc
@@ -1,4 +1,4 @@
-== Common tasks
+= Common tasks
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed faucibus turpis in eu mi bibendum neque. Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit amet. Ultrices sagittis orci a scelerisque purus semper. Rutrum tellus pellentesque eu tincidunt tortor. Nisl pretium fusce id velit ut tortor pretium. Morbi tristique senectus et netus et. Tortor pretium viverra suspendisse potenti nullam ac tortor. Urna nunc id cursus metus aliquam eleifend.
 
