--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,5 +1,5 @@
 = Feature abc
 
-This is prerelease document for feature-abc! I describe how create alpha versions of feature branch docs xref:1.0.0@technicallyawriter:ROOT:page$/tools/antora.adoc#_structured_configuration[on this page].
+These are prerelease docs for feature-abc!
 
-To get back to my actual portfolio
+NOTE: You're currently viewing docs from a feature branch that hasn't yet been merged to [branch]`main`. Pretty cool, huh? I describe how I created these alpha versions xref:1.0.0@technicallyawriter:ROOT:page$/tools/antora.adoc#_structured_configuration[on this page].
