--- a/modules/ROOT/examples/docs-as-code.adoc
+++ b/modules/ROOT/examples/docs-as-code.adoc
@@ -47,16 +47,23 @@ hotfix branch]
 === Naming conventions
 
 I prefer to name branches using ticket IDs, for example
-[branch]`feature/jira-123`. Descriptive names can become confusing, vague, or
+[branch]`feature/id-123`. Descriptive names can become confusing, vague, or
 even inaccurate as development evolves. The associated ticket ID serves as a
 breadcrumb to the source of truth, in this case a Jira ticket. This ticket
 contains the most up-to-date information about the feature and is a more
 appropriate place for details than a branch name.
 
-[source,bash] ++++ $ git branch
+[source,bash]
+
+++++
+$ git branch
 
 * main
-feature/jira-123 feature/jira-456 feature/jira-789 release/v1.1.0 hotfix/v1.0.4
+feature/id-123
+feature/id-456
+feature/id-789
+release/v1.1.0
+hotfix/v1.0.4
 ++++
 
 This isn't the most alluring naming convention, but sometimes:
@@ -94,17 +101,25 @@ permissions, for example. This is helpful when a task requires a specific
 permission. If the path to this location changes or I want to update wording in
 this blurb, I only need to update the snippet once.
 
-[source,xml] ++++ <MadCap:snippetBlock
-src="../Resources/Snippets/view-user-permissions.flsnp" /> ++++
+[source,xml]
+++++
+<MadCap:snippetBlocksrc="../resources/snippets/view-user-permissions.flsnp" />
+++++
 
 In *Hugo*, I can create a custom shortcode with this information.
 
-[source,markdown] ++++ {{% view-user-permissions %}} ++++
+[source,markdown]
+++++
+{{% view-user-permissions %}}
+++++
 
 When writing with AsciiDoc in *Antora*, I can use the `include::` directive to
 display content from a modular file.
 
-[source,asciidoc] ++++ \include::page$/view-user-permissions.adoc[] ++++
+[source,asciidoc]
+++++
+\include::page$/view-user-permissions.adoc[]
+++++
 
 === Topic typing
 
@@ -112,19 +127,24 @@ Another valuable content reuse technique is topic typing. At it's most general,
 I prefer to organize content into three basic categories: **concept**,
 **task**, or **reference**.
 
-* **Concept:** used when introducing or explaining an idea, like the overview
-* of a complex feature.  **Task:** used when instructing user action, like
-* enabling a feature within a product.  **Reference:** used when providing a
-* large amount of scannable information, like tabular data about compatibility.
+* *Concept:* used when introducing or explaining an idea, like the overview of a complex feature.
+* *Task:** used when instructing user action, like enabling a feature within a product.
+* *Reference:* used when providing a large amount of scannable information, like tabular data about compatibility.
 
 Dedicating a page to a specific topic type is enough modularity sometimes. For
 increased reuse potential, I can make each piece of content within a page more
 modular, if desired. For example:
 
-[source,asciidoc] ++++ = Topic xyz
+[source,asciidoc]
+++++
+= Topic xyz
 
-include::topic-xyz-intro.adoc include::topic-xyz-prerequities.adoc
-include::concept-x.adoc include::concept-y.adoc include::concept-z.adoc ++++
+\include::topic-xyz-intro.adoc
+\include::topic-xyz-prerequities.adoc
+\include::concept-x.adoc
+\include::concept-y.adoc
+\include::concept-z.adoc
+++++
 
 Regardless of how modular I go, I make sure I'm consistent in how I template
 these files. This consistency enables me to plug-and-play content as needed.
@@ -190,8 +210,8 @@ link:https://vale.sh[Vale^] deliver data around style guide adherence and
 readability. Vale lets you customize existing style guides and create your own
 rules to reflect your organization's preferences. It's a very powerful tool.
 
-Check out xref::../tools/vale.adoc[my personal Vale configuration for this
-portfolio, here.]
+Check out xref::page$/tools/vale.adoc[my personal Vale configuration for this
+portfolio.]
 
 === Acceptance criteria
 
