--- a/modules/ROOT/pages/principles/docs-as-code.adoc
+++ b/modules/ROOT/pages/principles/docs-as-code.adoc
@@ -138,7 +138,7 @@ Tech writers don't just write the docs. They should test them too!
 
 Validating documentation doesn't need to be purely subjective. Tools like link:https://vale.sh[Vale^] deliver data around style guide adherence and readability. Vale lets you customize existing style guides and create your own rules to reflect your organization's preferences. It's a very powerful tool.
 
-Check out xref::../tools/vale.adoc[my personal Vale configuration for this portfolio, here.]
+Check out xref::page$/tools/vale.adoc[my personal Vale configuration for this portfolio.]
 
 === Acceptance criteria
 
